--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,14 @@
     <div>
       <h1>Atticus</h1>
       <div class="btn-group">
-        <button onclick="console.log(mageStats)"> Stats </button>
+        <button style="background-color: rgb(134, 16, 245); border-radius: 5px; font-size: 25px;"
+          onclick="console.log(mageStats)">
+          Stats
+        </button>
         <button onclick="console.log('Attack: ' + magetoJson.atk)"> Attack </button>
+        <label for="quantity">Attack:</label>
+        <input type="number" id="quantity" name="quantity" min="20" max="25">
+        <input type="submit" value="Submit">
         <button onclick="console.log('Magic: ' + magetoJson.magi)"> Magic </button>
         <button onclick="console.log('Defense: ' + magetoJson.def)"> Defense </button>
         <button onclick="console.log('Speed: ' + magetoJson.spd)"> Speed </button>
@@ -83,7 +89,8 @@
     <div>
       <h1>Tango</h1>
       <div class="btn-group">
-        <button onclick="console.log(tankStats)"> Stats </button>
+        <button style="background-color: rgb(245, 16, 16); border-radius: 5px; font-size: 25px;"
+          onclick="console.log(tankStats)"> Stats </button>
         <button onclick="console.log('Attack: ' + tanktoJson.atk)"> Attack </button>
         <button onclick="console.log('Magic: ' + tanktoJson.magi)"> Magic </button>
         <button onclick="console.log('Defense: ' + tanktoJson.def)"> Defense </button>
@@ -97,7 +104,8 @@
     <div class="stack">
       <h1>Midnight</h1>
       <div class="btn-group">
-        <button onclick="console.log(rogueStats)"> Stats </button>
+        <button style="background-color: rgb(0, 221, 250); border-radius: 5px; font-size: 25px;"
+          onclick="console.log(rogueStats)"> Stats </button>
         <button onclick="console.log('Attack: ' + roguetoJson.atk)"> Attack </button>
         <button onclick="console.log('Magic: ' + roguetoJson.magi)"> Magic </button>
         <button onclick="console.log('Defense: ' + roguetoJson.def)"> Defense </button>
@@ -109,7 +117,26 @@
     </div>
 
   </div>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyAepN_L1ory2bZ6DOiBbRdA6XlZQGygcoc",
+      authDomain: "jgdcse405.firebaseapp.com",
+      databaseURL: "https://jgdcse405.firebaseio.com",
+      projectId: "jgdcse405",
+      storageBucket: "jgdcse405.appspot.com",
+      messagingSenderId: "232738877668",
+      appId: "1:232738877668:web:95d25ae752979420cefcf1"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
 </body>
 
 </html>
