--- a/public/index.html
+++ b/public/index.html
@@ -74,12 +74,12 @@
           onclick="console.log(mageStats); location.href = 'atticus.html'">
           Atticus
         </button>
-        <button onclick="console.log('Attack: ' + magetoJson.atk)"> Attack </button>
-        <button onclick="console.log('Magic: ' + magetoJson.magi)"> Magic </button>
-        <button onclick="console.log('Defense: ' + magetoJson.def)"> Defense </button>
-        <button onclick="console.log('Speed: ' + magetoJson.spd)"> Speed </button>
-        <button onclick="console.log('Resistance: ' + magetoJson.res)"> Resistance </button>
-        <button onclick="console.log('Level: ' + magetoJson.level)"> Level </button>
+        <button onclick="console.log('Attack: ' + magetoJson.atk)"> Attack: 20 </button>
+        <button onclick="console.log('Magic: ' + magetoJson.magi)"> Magic: 100 </button>
+        <button onclick="console.log('Defense: ' + magetoJson.def)"> Defense: 25 </button>
+        <button onclick="console.log('Speed: ' + magetoJson.spd)"> Speed: 40 </button>
+        <button onclick="console.log('Resistance: ' + magetoJson.res)"> Resistance: 90 </button>
+        <button onclick="console.log('Level: ' + magetoJson.level)"> Level: 1 </button>
       </div>
     </div>
 
@@ -88,12 +88,12 @@
       <div class="btn-group">
         <button style="background-color: rgb(245, 16, 16); border-radius: 5px; font-size: 25px;"
           onclick="console.log(tankStats);  location.href = 'tango.html'"> Tango </button>
-        <button onclick="console.log('Attack: ' + tanktoJson.atk)"> Attack </button>
-        <button onclick="console.log('Magic: ' + tanktoJson.magi)"> Magic </button>
-        <button onclick="console.log('Defense: ' + tanktoJson.def)"> Defense </button>
-        <button onclick="console.log('Speed: ' + tanktoJson.spd)"> Speed </button>
-        <button onclick="console.log('Resistance: ' + tanktoJson.res)"> Resistance </button>
-        <button onclick="console.log('Level: ' + tanktoJson.level)"> Level </button>
+        <button onclick="console.log('Attack: ' + tanktoJson.atk)"> Attack: 60 </button>
+        <button onclick="console.log('Magic: ' + tanktoJson.magi)"> Magic: 5 </button>
+        <button onclick="console.log('Defense: ' + tanktoJson.def)"> Defense: 100 </button>
+        <button onclick="console.log('Speed: ' + tanktoJson.spd)"> Speed: 25 </button>
+        <button onclick="console.log('Resistance: ' + tanktoJson.res)"> Resistance: 20 </button>
+        <button onclick="console.log('Level: ' + tanktoJson.level)"> Level: 1 </button>
       </div>
 
     </div>
@@ -103,12 +103,12 @@
       <div class="btn-group">
         <button style="background-color: rgb(0, 221, 250); border-radius: 5px; font-size: 25px;"
           onclick="console.log(rogueStats);  location.href = 'midnight.html'"> Midnight </button>
-        <button onclick="console.log('Attack: ' + roguetoJson.atk)"> Attack </button>
-        <button onclick="console.log('Magic: ' + roguetoJson.magi)"> Magic </button>
-        <button onclick="console.log('Defense: ' + roguetoJson.def)"> Defense </button>
-        <button onclick="console.log('Speed: ' + roguetoJson.spd)"> Speed </button>
-        <button onclick="console.log('Resistance: ' + roguetoJson.res)"> Resistance </button>
-        <button onclick="console.log('Level: ' + roguetoJson.level)"> Level </button>
+        <button onclick="console.log('Attack: ' + roguetoJson.atk)"> Attack: 100 </button>
+        <button onclick="console.log('Magic: ' + roguetoJson.magi)"> Magic: 25 </button>
+        <button onclick="console.log('Defense: ' + roguetoJson.def)"> Defense: 20 </button>
+        <button onclick="console.log('Speed: ' + roguetoJson.spd)"> Speed: 80 </button>
+        <button onclick="console.log('Resistance: ' + roguetoJson.res)"> Resistance: 60 </button>
+        <button onclick="console.log('Level: ' + roguetoJson.level)"> Level: 1 </button>
       </div>
 
     </div>
