--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 
 
 
 <head>
+  <meta charset="UTF-8">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>Dogs & Dungeons</title>
   <style>
     div {
@@ -37,36 +41,80 @@
       flex: 1;
 
     }
-
-    input[type=button] {
-      background-color: #99ff99;
-      border: 2px solid #6666ff;
-      color: #ff9999;
-      padding: 5px 10px;
-      text-decoration: none;
-      margin: auto;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1.2rem;
-      font-weight: bold;
-    }
-
-    input:hover,
-    input:active {
-      color: #99ff99;
-      background-color: #ff9999;
-      font-size: 1.5rem;
-      border: 2px solid #6666ff;
-    }
   </style>
 
 </head>
 
-<body>
+
+<body class="grey lighten-2">
+
+  <nav class="z-depth-0 grey lighten-1">
+    <div class="nav-wrapper container">
+      <a href="#" class="brand-logo right"> Dogs & Dungeons</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li class="logged-in" style="display: none;">
+          <a href="#" class="white-text modal-trigger" data-target="modal-account">Account</a>
+        </li>
+        <li class="logged-in" style="display: none;">
+          <a href="#" class="white-text" id="logout">Logout</a>
+        </li>
+        <li class="logged-out" style="display: none;">
+          <a href="#" class="white-text modal-trigger" data-target="modal-login">Login</a>
+        </li>
+        <li class="logged-out" style="display: none;">
+          <a href="#" class="white-text modal-trigger" data-target="modal-signup">Sign up</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- SIGN UP MODAL -->
+  <div id="modal-signup" class="modal">
+    <div class="modal-content">
+      <h4>Sign up</h4><br />
+      <form id="signup-form">
+        <div class="input-field">
+          <input type="email" id="signup-email" required />
+          <label for="signup-email">Email address</label>
+        </div>
+        <div class="input-field">
+          <input type="password" id="signup-password" required />
+          <label for="signup-password">Choose password</label>
+        </div>
+        <button class="btn yellow darken-2 z-depth-0">Sign up</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- LOGIN MODAL -->
+  <div id="modal-login" class="modal">
+    <div class="modal-content">
+      <h4>Login</h4><br />
+      <form id="login-form">
+        <div class="input-field">
+          <input type="email" id="login-email" required />
+          <label for="login-email">Email address</label>
+        </div>
+        <div class="input-field">
+          <input type="password" id="login-password" required />
+          <label for="login-password">Your password</label>
+        </div>
+        <button class="btn yellow darken-2 z-depth-0">Login</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- ACCOUNT MODAL -->
+  <div id="modal-account" class="modal">
+    <div class="modal-content center-align">
+      <h4>Account details</h4><br />
+      <div class="account-details"></div>
+    </div>
+  </div>
 
   <h1 style="text-align:center"> Choose Your Character! </h1>
   <div class="container">
-    <script src="dogs.js"> </script>
+
     <div>
 
       <div class="btn-group">
@@ -114,11 +162,12 @@
     </div>
 
   </div>
+
+
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js"></script>
 
   <script>
     // Your web app's Firebase configuration
@@ -133,7 +182,19 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+
+    //firestore & auth refrences
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    //firestore update
+    db.settings({ timestampsInSnapshots: true });
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="scripts/auth.js"></script>
+  <script src="scripts/index.js"></script>
+  <script src="scripts/dogs.js"> </script>
+
 </body>
 
 </html>
