--- a/public/atticus.html
+++ b/public/atticus.html
@@ -41,7 +41,7 @@
     }
   </style>
 </head>
-<script src="dogs.js"> </script>
+<script src="scripts/dogs.js"> </script>
 
 <script type="text/javascript">
   function btnDisable() {
