--- a/public/midnight.html
+++ b/public/midnight.html
@@ -44,7 +44,7 @@
 
 </head>
 
-<script src="dogs.js"> </script>
+<script src="scripts/dogs.js"> </script>
 
 <script type="text/javascript">
   function btnDisable() {
