--- a/public/tango.html
+++ b/public/tango.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 
-<script src="dogs.js"> </script>
+<script src="scripts/dogs.js"> </script>
 
 <script type="text/javascript">
   function btnDisable() {
