--- a/public/midnight.html
+++ b/public/midnight.html
@@ -52,6 +52,22 @@
   }
 </script>
 
+<script type="text/javascript">
+  function statSave() {
+
+    const saveStats = document.querySelector('#charStats');
+    db.collection('userCharStats').add({
+      Name: rogue.name,
+      Attack: document.getElementById("atk").value,
+      Magic: document.getElementById("magi").value,
+      Defense: document.getElementById("def").value,
+      Speed: document.getElementById("spd").value,
+      Resistance: document.getElementById("res").value,
+    });
+
+  }
+</script>
+
 
 <body onload="dogStats(rogue)">
 
@@ -80,10 +96,38 @@
       onclick="statBoost(rogue); btnDisable(); this.disabled=true;">
       Random Stat Boost
     </button>
-    <button disabled="true" id="aStart" style="background-color:rgb(0, 221, 250); font-size: 25px;" onclick="">
+    <button disabled="true" id="aStart" style="background-color:rgb(0, 221, 250); font-size: 25px;"
+      onclick="statSave()">
       Start Adventure
     </button>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyAepN_L1ory2bZ6DOiBbRdA6XlZQGygcoc",
+      authDomain: "jgdcse405.firebaseapp.com",
+      databaseURL: "https://jgdcse405.firebaseio.com",
+      projectId: "jgdcse405",
+      storageBucket: "jgdcse405.appspot.com",
+      messagingSenderId: "232738877668",
+      appId: "1:232738877668:web:95d25ae752979420cefcf1"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+
+    //firestore & auth refrences
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    //firestore update
+    db.settings({ timestampsInSnapshots: true });
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 
 </html>
