--- a/public/atticus.html
+++ b/public/atticus.html
@@ -95,7 +95,7 @@
       Random Stat Boost
     </button>
     <input type="button" disabled="true" id="aStart" value="Start Adventure"
-      style="background-color:#8610f5; font-size: 25px;" onclick="statSave()">
+      style="background-color:#8610f5; font-size: 25px;" onclick="statSave(); location.href = 'adventureStart.html'">
 
   </div>
 
