--- a/public/midnight.html
+++ b/public/midnight.html
@@ -97,7 +97,7 @@
       Random Stat Boost
     </button>
     <button disabled="true" id="aStart" style="background-color:rgb(0, 221, 250); font-size: 25px;"
-      onclick="statSave()">
+      onclick="statSave(); location.href = 'adventureStart.html' ">
       Start Adventure
     </button>
   </div>
