--- a/public/tango.html
+++ b/public/tango.html
@@ -94,7 +94,7 @@
       Random Stat Boost
     </button>
     <button disabled="true" id="aStart" style="background-color:rgb(245, 16, 16); font-size: 25px;"
-      onclick="statSave()">
+      onclick="statSave(); location.href = 'adventureStart.html' ">
       Start Adventure
     </button>
   </div>
