--- a/public/atticus.html
+++ b/public/atticus.html
@@ -5,6 +5,10 @@
 <head>
   <title>Atticus</title>
   <style>
+    body {
+      background-color: #e0e0e0;
+    }
+
     div {
       margin: auto;
       text-align: center;
@@ -32,6 +36,20 @@
       /* Set a width if needed */
       display: block;
       /* Make the buttons appear below each other */
+      margin: auto;
+      margin-bottom: 10px;
+      flex: 1;
+    }
+
+    .btn-group2 button {
+      padding: 10px 24px;
+      /* Some padding */
+      cursor: pointer;
+      /* Pointer/hand icon */
+      width: 20%;
+      /* Set a width if needed */
+      display: inline;
+      /* Make the buttons appear next to each other */
       margin: auto;
       margin-bottom: 10px;
       flex: 1;
@@ -89,13 +107,17 @@
 
   </div>
 
-  <div class="btn-group">
+  <div class="btn-group2">
     <button title="Boosts each stat by a random number (+5 max)" style="background-color:#8610f5; font-size: 25px;"
       onclick="statBoost(mage); btnDisable(); this.disabled=true;">
       Random Stat Boost
     </button>
-    <input type="button" disabled="true" id="aStart" value="Start Adventure"
-      style="background-color:#8610f5; font-size: 25px;" onclick="statSave(); location.href = 'adventureStart.html'">
+    <!-- <input disabled="true" id="aStart" value="Start Adventure" style="background-color:#8610f5; font-size: 25px;"
+      onclick="statSave(); location.href = 'adventureStart.html'"> -->
+    <button disabled="true" id="aStart" style="background-color:#8610f5; font-size: 25px;"
+      onclick="statSave(); location.href = 'adventureStart.html' ">
+      Start Adventure
+    </button>
 
   </div>
 
