--- a/public/midnight.html
+++ b/public/midnight.html
@@ -3,8 +3,11 @@
 
 <head>
   <title>Midnight</title>
-
   <style>
+    body {
+      background-color: #e0e0e0;
+    }
+
     div {
       margin: auto;
       text-align: center;
@@ -32,6 +35,20 @@
       /* Set a width if needed */
       display: block;
       /* Make the buttons appear below each other */
+      margin: auto;
+      margin-bottom: 10px;
+      flex: 1;
+    }
+
+    .btn-group2 button {
+      padding: 10px 24px;
+      /* Some padding */
+      cursor: pointer;
+      /* Pointer/hand icon */
+      width: 20%;
+      /* Set a width if needed */
+      display: inline;
+      /* Make the buttons appear next to each other */
       margin: auto;
       margin-bottom: 10px;
       flex: 1;
@@ -90,7 +107,7 @@
 
   </div>
 
-  <div class="btn-group">
+  <div class="btn-group2">
     <button title="Boosts each stat by a random number (+5 max)"
       style="background-color:rgb(0, 221, 250); font-size: 25px;"
       onclick="statBoost(rogue); btnDisable(); this.disabled=true;">
