--- a/public/tango.html
+++ b/public/tango.html
@@ -4,6 +4,10 @@
 <head>
   <title>Tango</title>
   <style>
+    body {
+      background-color: #e0e0e0;
+    }
+
     div {
       margin: auto;
       text-align: center;
@@ -31,6 +35,20 @@
       /* Set a width if needed */
       display: block;
       /* Make the buttons appear below each other */
+      margin: auto;
+      margin-bottom: 10px;
+      flex: 1;
+    }
+
+    .btn-group2 button {
+      padding: 10px 24px;
+      /* Some padding */
+      cursor: pointer;
+      /* Pointer/hand icon */
+      width: 20%;
+      /* Set a width if needed */
+      display: inline;
+      /* Make the buttons appear next to each other */
       margin: auto;
       margin-bottom: 10px;
       flex: 1;
@@ -87,7 +105,7 @@
 
   </div>
 
-  <div class="btn-group">
+  <div class="btn-group2">
     <button title="Boosts each stat by a random number (+5 max)"
       style="background-color:rgb(245, 16, 16); font-size: 25px;"
       onclick="statBoost(tank); btnDisable(); this.disabled=true;">
