lots of changes
did not keep track of changes

--- a/public/atticus.html
+++ b/public/atticus.html
@@ -91,19 +91,22 @@
 
   <h1 style="text-align:center; background-color:#8610f5; font-size: 75px;">Atticus</h1>
   <div class="btn-group" id="charStats">
-    <h1>Attack: <input class="stat" type="button" id="atk" value="Attack" title="Power of physical attacks"> </h1>
+    <h1>Attack: <input class="stat" style="font-size: 25px;" type="button" id="atk" value="Attack"
+        title="Power of physical attacks"> </h1>
 
-    <h1>Magic: <input class="stat" style="font-size: 30px;" type="button" id="magi" value="Magic"
+    <h1>Magic: <input class="stat" style="font-size: 25px;" type="button" id="magi" value="Magic"
         title="Power of Magical attacks"></h1>
-    <h1>Defense: <input class="stat" type="button" id="def" value="Defense" title="Defense against physical attacks">
+    <h1>Defense: <input class="stat" style="font-size: 25px;" type="button" id="def" value="Defense"
+        title="Defense against physical attacks">
     </h1>
 
-    <h1>Speed: <input class="stat" type="button" id="spd" value="Speed" title="How fast are they?"></h1>
+    <h1>Speed: <input class="stat" style="font-size: 25px;" type="button" id="spd" value="Speed"
+        title="How fast are they?"></h1>
 
-    <h1>Resistance: <input class="stat" type="button" id="res" value="Resistance"
+    <h1>Resistance: <input class="stat" style="font-size: 25px;" type="button" id="res" value="Resistance"
         title="Defense against magical attacks"> </h1>
 
-    <h1> Level: <input class="stat" type="button" id="lvl" value="1"> </h1>
+    <h1> Level: <input class="stat" style="font-size: 25px;" type="button" id="lvl" value="1"> </h1>
 
   </div>
 
